# SynAI

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
docs/: ai_context.md  architecture.md  changelog.md  coding_standards.md  decisions.md  file_manifest.md  known_issues.md  progress.md  project_spec.md  prompt_rules.md  roadmap.md  skills.md  vision.md
src/: __init__.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  app.py  container.py  interfaces.py  orchestrator.py  skill_registry.py
src/services/speech/: __init__.py  speech_recognizer.py  speech_service.py  speech_synthesizer.py
src/skills/: __init__.py  base.py  tell_date.py  tell_joke.py  tell_time.py
src/utils/: __init__.py  logging.py
